--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,7 @@
 NODE_ENV=development
 VUE_APP_PREVIEW=true
 VUE_APP_API_BASE_URL=/api
+; 后端地址，注意不要配置成localhost或者127.0.0.1，需要为本机IP地址，避免附件预览时无法访问
+VUE_APP_BACKEND_API_BASE_URL=http://192.168.50.100:8080/llm
+; kkFIleView地址
+VUE_APP_KKFILEVIEW_URL=http://127.0.0.1:8012
