--- a/.env.preview
+++ b/.env.preview
@@ -1,3 +1,7 @@
 NODE_ENV=production
 VUE_APP_PREVIEW=true
 VUE_APP_API_BASE_URL=/api
+; 后端地址，注意不要配置成localhost或者127.0.0.1，需要为本机IP地址，避免附件预览时无法访问
+BACKEND_API_BASE_URL=
+; kkFIleView地址
+KKFILEVIEW_URL=
