--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "8",
     "core-js": "^3.21.1",
     "enquire.js": "^2.1.6",
+    "js-base64": "^3.7.6",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
@@ -33,6 +34,7 @@
     "vue": "^2.6.14",
     "vue-clipboard2": "^0.2.1",
     "vue-cropper": "0.4.9",
+    "vue-esign": "^1.1.4",
     "vue-i18n": "^8.27.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.3",
